scripts/runtime/prod-exposure/tickets-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-nuc
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8799
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tickets-nuc
  namespace: default
subsets:
- addresses:
  - ip: 178.156.146.205
  ports:
  - name: http
    port: 8799
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tickets-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: tickets.oneshell.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tickets-nuc
            port:
              number: 80
  tls:
  - hosts:
    - tickets.oneshell.in
    secretName: oneshell-credential
